--- a/app/src/main/res/layout/dialog_location_add.xml
+++ b/app/src/main/res/layout/dialog_location_add.xml
@@ -1,64 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/ll_dialog_location_btns"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:orientation="vertical"
         android:padding="20dp"
-        android:layout_marginHorizontal="16dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="serif"
+            android:gravity="center"
+            android:layout_marginBottom="4dp"
+            android:text="@string/add_route_header"
             android:textColor="@android:color/black"
-            android:text="@string/add_route_header"/>
-
-        <RadioGroup
-            android:id="@+id/rg_dialog_routes"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <RadioButton
-                android:id="@+id/rbtn_dialog_location_bouldering"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/bouldering"/>
-
-            <RadioButton
-                android:id="@+id/rbtn_dialog_location_sport"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/sport_climbing"/>
-
-            <RadioButton
-                android:id="@+id/rbtn_dialog_location_trad"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/trad_climbing"/>
-
-            <RadioButton
-                android:id="@+id/rbtn_dialog_location_alpine"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/alpine_climbing"/>
-
-        </RadioGroup>
+            android:textSize="16sp"/>
 
         <Button
-            android:id="@+id/btn_dialog_location_go"
+            android:id="@+id/btn_dialog_location_bouldering"
+            style="@style/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/place"
-            android:layout_weight="1"/>
+            android:text="@string/bouldering" />
+
+        <Button
+            android:id="@+id/btn_dialog_location_sport"
+            style="@style/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/sport" />
+
+        <Button
+            android:id="@+id/btn_dialog_location_trad"
+            style="@style/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/trad" />
+
+        <Button
+            android:id="@+id/btn_dialog_location_alpine"
+            style="@style/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/alpine" />
 
     </LinearLayout>
 
