--- a/app/src/main/res/layout/dialog_location_add.xml
+++ b/app/src/main/res/layout/dialog_location_add.xml
@@ -2,11 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background">
 
     <LinearLayout
         android:id="@+id/ll_dialog_location_btns"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:orientation="vertical"
@@ -23,7 +24,7 @@
             android:gravity="center"
             android:layout_marginBottom="4dp"
             android:text="@string/add_route_header"
-            android:textColor="@android:color/black"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="16sp"/>
 
         <Button
