--- a/app/src/main/res/layout-v21/list_route_image_item.xml
+++ b/app/src/main/res/layout-v21/list_route_image_item.xml
@@ -1,39 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="8dp"
-        app:cardMaxElevation="2dp"
-        app:cardElevation="1dp"
-        app:cardBackgroundColor="@color/colorTextButton"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <ImageView
-            android:id="@+id/iv_list_route_image_source"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/list_route_image_default" />
-
-    </androidx.cardview.widget.CardView>
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="300dp"
+    android:layout_margin="8dp"
+    app:cardBackgroundColor="@color/colorTextButton"
+    app:cardElevation="1dp"
+    app:cardMaxElevation="2dp">
 
     <ImageView
-        android:id="@+id/iv_list_route_image_btn"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:elevation="3dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/img_cancel"/>
+        android:id="@+id/iv_list_route_image_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/list_route_image_default" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/iv_list_route_image_source"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:clickable="false"
+        android:layout_margin="2dp"
+        android:adjustViewBounds="true"
+        android:src="@drawable/img_add_route_add_image" />
+
+</androidx.cardview.widget.CardView>
