--- a/app/src/main/res/layout/activity_add_route.xml
+++ b/app/src/main/res/layout/activity_add_route.xml
@@ -27,9 +27,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginTop="8dp"
+                android:background="@color/colorTextButton"
                 android:hint="@string/route_name"
                 android:textColorHint="@color/colorPrimary"
-                android:background="@color/colorTextButton"
                 app:counterEnabled="true"
                 app:counterMaxLength="40"
                 app:counterTextColor="@color/colorPrimary"
@@ -41,18 +41,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/colorTextButton"
-                    android:lines="1"
+                    android:inputType="textCapSentences"
                     android:textColor="@color/colorPrimaryDark" />
 
             </com.google.android.material.textfield.TextInputLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="8dp"
-                android:layout_marginTop="12dp"
-                android:text="@string/add_at_least_one_image"
-                android:textColor="@color/colorPrimaryDark" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_add_route_images"
@@ -83,6 +75,7 @@
                     android:stepSize="1"
                     android:valueFrom="0"
                     android:valueTo="100"
+                    app:labelBehavior="gone"
                     app:thumbColor="@color/colorPrimaryDark"
                     app:tickColorActive="@color/colorPrimary"
                     app:tickColorInactive="@color/background"
