--- a/app/src/main/res/drawable/list_route_image_default.xml
+++ b/app/src/main/res/drawable/list_route_image_default.xml
@@ -5,7 +5,7 @@
     tools:targetApi="lollipop">
     <item>
         <shape>
-            <solid android:color="@color/colorTextButton"/>
+            <solid android:color="@color/colorPrimary"/>
             <stroke android:color="@color/colorPrimary"
                 android:width="3dp"
                 android:dashGap="3dp"
