--- a/app/src/main/res/layout-v21/list_route_image_item.xml
+++ b/app/src/main/res/layout-v21/list_route_image_item.xml
@@ -2,6 +2,7 @@
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cv_list_route_image"
     android:layout_width="wrap_content"
     android:layout_height="300dp"
     android:layout_margin="8dp"
@@ -10,18 +11,11 @@
     app:cardMaxElevation="2dp">
 
     <ImageView
-        android:id="@+id/iv_list_route_image_background"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/list_route_image_default" />
-
-    <ImageView
         android:id="@+id/iv_list_route_image_source"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:clickable="false"
-        android:layout_margin="2dp"
         android:adjustViewBounds="true"
-        android:src="@drawable/img_add_route_add_image" />
+        android:layout_margin="2dp"
+        android:background="@drawable/list_route_image_default"/>
 
 </androidx.cardview.widget.CardView>
