Consistent action bar theme and saved selected images.

--- a/app/src/main/res/layout/activity_add_route.xml
+++ b/app/src/main/res/layout/activity_add_route.xml
@@ -166,7 +166,7 @@
 
     </ScrollView>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_add_route_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
