--- a/app/src/main/res/drawable/list_route_image_background.xml
+++ b/app/src/main/res/drawable/list_route_image_background.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:tools="http://schemas.android.com/tools"
-    android:color="@color/colorPrimaryDark"
+    android:color="@color/background"
     xmlns:android="http://schemas.android.com/apk/res/android"
     tools:targetApi="lollipop">
     <item>
         <shape>
-            <solid android:color="@color/colorPrimary"/>
+            <solid android:color="@color/colorTextButton"/>
             <stroke android:color="@color/colorPrimary"
                 android:width="3dp"
                 android:dashGap="3dp"
