--- a/app/src/main/res/layout-v21/list_route_image_item.xml
+++ b/app/src/main/res/layout-v21/list_route_image_item.xml
@@ -16,6 +16,7 @@
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:layout_margin="2dp"
-        android:background="@drawable/list_route_image_default"/>
+        android:background="@drawable/list_route_image_background"
+        android:padding="3dp"/>
 
 </androidx.cardview.widget.CardView>
