--- a/app/src/main/res/layout/activity_add_route.xml
+++ b/app/src/main/res/layout/activity_add_route.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
@@ -36,7 +35,7 @@
                 app:errorEnabled="true"
                 app:hintTextColor="@color/colorPrimary">
 
-                <com.google.android.material.textfield.TextInputEditText
+                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_add_route_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -49,14 +48,14 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_add_route_images"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="4dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginHorizontal="8dp"
-                android:layout_marginTop="8dp"
                 android:background="@color/colorTextButton">
 
                 <TextView
