--- a/app/src/main/res/layout/layout_map_new_route.xml
+++ b/app/src/main/res/layout/layout_map_new_route.xml
@@ -29,8 +29,8 @@
 
     <ImageView
         android:id="@+id/iv_new_route_type"
-        android:layout_width="36dp"
-        android:layout_height="60dp"
+        android:layout_width="@dimen/marker_width"
+        android:layout_height="@dimen/marker_height"
         android:layout_gravity="center"
         android:src="@drawable/img_marker_boulder"/>
 
