Worked on displaying route information

--- a/app/src/main/res/layout/header_route_drawer.xml
+++ b/app/src/main/res/layout/header_route_drawer.xml
@@ -1,6 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/iv_nav_view_route"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:src="@drawable/img_cancel"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/tv_nav_view_route_name"
+        android:layout_marginStart="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:text="@string/name"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="20sp"
+        android:background="@color/navViewTextBackground"
+        app:layout_constraintBottom_toTopOf="@id/tv_nav_view_route_type"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/tv_nav_view_route_type"
+        android:layout_marginStart="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:text="@string/grade"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="20sp"
+        android:background="@color/navViewTextBackground"
+        app:layout_constraintBottom_toTopOf="@id/tv_nav_view_route_grade"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:id="@+id/tv_nav_view_route_grade"
+        android:layout_margin="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:text="@string/grade"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="20sp"
+        android:background="@color/navViewTextBackground"
+        app:layout_constraintBottom_toBottomOf="@id/iv_nav_view_route"
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
