--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="background">#EAEAEA</color>
     <color name="colorTextButton">#FFFFFF</color>
+    <color name="navViewTextBackground">#80EAEAEA</color>
 </resources>
