--- a/app/src/main/res/layout/activity_route_info.xml
+++ b/app/src/main/res/layout/activity_route_info.xml
@@ -10,6 +10,8 @@
         android:id="@+id/nav_host_fragment_route"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:defaultNavHost="true"
         app:navGraph="@navigation/navigation_route"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
